--- a/notebooks/matplotlib.ipynb
+++ b/notebooks/matplotlib.ipynb
@@ -244,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Jan  3 2023, 23:18:52) [GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
